commit for flightListing

--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-range-slider-input": "^3.0.7",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
+    "resuite": "^0.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
